<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.commandertrip.cupcakemock.models.TravelViewModel" />

        <variable
            name="flightDetailsFragment"
            type="com.commandertrip.cupcakemock.fragments.FlightDetailsFragment" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_primary"
        android:theme="@style/Theme.CupcakeMock"
        tools:context=".fragments.FlightDetailsFragment">

        <RadioGroup
            android:id="@+id/flight_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/std_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/delta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewModel.setFlightChoice(@string/delta_air_lines)}"
                android:text="@string/delta_air_lines"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textColor="@color/white" />

            <RadioButton
                android:id="@+id/united"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewModel.setFlightChoice(@string/united_airlines)}"
                android:text="@string/united_airlines"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textColor="@color/white" />

            <RadioButton
                android:id="@+id/spirit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewModel.setFlightChoice(@string/spirit_airlines)}"
                android:text="@string/spirit_airlines"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textColor="@color/white" />
        </RadioGroup>


        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="5dp"
            android:layout_marginHorizontal="@dimen/std_margin"
            android:layout_marginTop="@dimen/std_margin"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/flight_options" />

        <Button
            android:id="@+id/see_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/std_margin"
            android:layout_marginTop="@dimen/std_margin"
            android:onClick="@{() -> flightDetailsFragment.goToFlightSummary()}"
            android:text="@string/see_summary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider" />

        <Button
            android:id="@+id/cancel_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/std_margin"
            android:layout_marginTop="@dimen/std_margin"
            android:onClick="@{() -> flightDetailsFragment.cancelPlan()}"
            android:text="@string/cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/see_summary" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>